fix: preserve deterministic proof propagation order